# slide2d_Engine

./: blueprint_1.json  blueprint_2.json  scenes.json
Content/Blueprint/: Blueprint_1.s2blueprint
assets/tilesets/: 屏幕截图 2026-05-31 003655.s2tileset  屏幕截图 2026-05-31 010710.s2tileset
plugins/slide2d_official_pickup/: plugin.json
slide2d_Engine/: Cargo.toml  scenes.json
slide2d_Engine/.cargo/: config.toml
slide2d_Engine/assets/animations/: 新动画.s2anim
slide2d_Engine/assets/tilesets/: 屏幕截图 2026-07-10 222630.s2tileset
slide2d_Engine/lang/: cn.json  en.json
slide2d_Engine/src/: app_state.rs  localization.rs  main.rs  plugins.rs  project.rs
slide2d_Engine/src/animation/: mod.rs
slide2d_Engine/src/assets/: mod.rs
slide2d_Engine/src/blueprint/: editor.rs  mod.rs  model.rs  vm.rs
slide2d_Engine/src/editor/: mod.rs
slide2d_Engine/src/game_ui/: mod.rs
slide2d_Engine/src/runtime/: mod.rs  rectangle.wgsl
slide2d_Engine/src/tilemap/: mod.rs
